--- a/portail-chercheurs-frontend/src/pages/Chercheurs.css
+++ b/portail-chercheurs-frontend/src/pages/Chercheurs.css
@@ -60,9 +60,10 @@ th {
   border: none;
   font-size: 1.5rem;
   cursor: pointer;
-  color: #333;
+  color: var(--color-text-secondary);
+  transition: 0.3s;
 }
 
 .close-btn:hover {
-  color: red;
+  color: var(--color-text-primary);
 }
