--- a/portail-chercheurs-frontend/src/pages/Chercheurs.css
+++ b/portail-chercheurs-frontend/src/pages/Chercheurs.css
@@ -20,11 +20,13 @@ th {
   align-items: center;
   justify-content: center;
   z-index: 1000;
+  overflow: hidden; /* Empêche le scroll de l'arrière-plan */
 }
 
 /* Contenu du pop-up */
 .popup-content {
-  background: white;
+  background: var(--color-bg);
+  color: var(--color-text-primary);
   width: 80%;
   height: 90%;
   padding: 20px;
@@ -33,8 +35,8 @@ th {
   display: flex;
   flex-direction: column;
   box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  overflow: auto; /* Permet le scroll à l'intérieur du pop-up */
 }
-
 /* Bouton de fermeture */
 .close-btn {
   position: absolute;
