--- a/portail-chercheurs-frontend/src/pages/Chercheurs.css
+++ b/portail-chercheurs-frontend/src/pages/Chercheurs.css
@@ -28,7 +28,7 @@ th {
   background: var(--color-bg);
   color: var(--color-text-primary);
   width: 80%;
-  height: 90%;
+  height: 100vh;
   padding: 20px;
   border-radius: 10px;
   position: relative;
