--- a/portail-chercheurs-frontend/src/index.css
+++ b/portail-chercheurs-frontend/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -10,11 +12,13 @@
   --color-bg-secondary: #f1f1f1;
   --color-white: #fefefe;
   --color-gray: #b0b0b0;
-  --font-base: "Roboto", sans-serif;
+  --font-base: "Inter", sans-serif;
   --spacing-base: 1rem;
 }
 :root {
   font-family: var(--font-base);
+  line-height: 20px;
+  letter-spacing: 0;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
