--- a/portail-chercheurs-frontend/src/index.css
+++ b/portail-chercheurs-frontend/src/index.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 :root {
@@ -12,7 +13,7 @@
   --color-bg-secondary: #f1f1f1;
   --color-white: #fefefe;
   --color-gray: #b0b0b0;
-  --font-base: "Inter", sans-serif;
+  --font-base: "Poppins", sans-serif;
   --spacing-base: 1rem;
 }
 :root {
